# dependency-jail

./: HANDOFF.md  LICENSE  README.md  __main__.py  my_report.json  pyproject.toml  setup.sh  test_socket.py
dep_jail/: __init__.py  cli.py  core.py  gui.py  libjail.c  resolver.py  verify.py
dependency_jail.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_jail.py
ui/: index.html  report_viewer.html
