[build-system]
requires      = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name        = "dependency-jail"
version     = "1.0.0"
description = "Zero-root Linux sandbox that blocks unauthorized outbound connections during package installations."
readme      = "README.md"
license     = { text = "MIT" }
requires-python = ">=3.9"
keywords    = ["security", "sandbox", "supply-chain", "ld-preload", "npm", "pip"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Networking :: Monitoring",
    "Topic :: Utilities",
]

dependencies = []   # pure stdlib — intentionally zero external deps

[project.urls]
Homepage      = "https://github.com/yourusername/dependency-jail"
Issues        = "https://github.com/yourusername/dependency-jail/issues"
Documentation = "https://github.com/yourusername/dependency-jail#readme"

[project.scripts]
dep-jail = "dep_jail.cli:main"
dep-jail-gui = "dep_jail.gui:main"

[tool.setuptools.packages.find]
where     = ["."]
include   = ["dep_jail*"]

[tool.setuptools.package-data]
"dep_jail" = ["libjail.c"]

[tool.pytest.ini_options]
testpaths    = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py39"
